[gd_scene load_steps=3 format=2]

[ext_resource path="res://falling_writer/themes/dark.tres" type="Theme" id=1]
[ext_resource path="res://falling_writer/scripts/settings_screen.gd" type="Script" id=2]

[node name="SettingsScreen" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="ScrollContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0

[node name="SettingsContainer" type="VBoxContainer" parent="ScrollContainer/Control/VBoxContainer"]
unique_name_in_owner = true
margin_right = 994.0
margin_bottom = 19.0

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/Control/VBoxContainer/SettingsContainer"]
margin_right = 994.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="ScrollContainer/Control/VBoxContainer/SettingsContainer/CenterContainer"]
margin_left = 459.0
margin_right = 534.0
margin_bottom = 19.0
text = "SETTINGS"

[node name="CloseButton" type="Button" parent="ScrollContainer/Control/VBoxContainer"]
margin_top = 23.0
margin_right = 994.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 40 )
text = "Close"

[connection signal="popup_hide" from="." to="ScrollContainer/Control/VBoxContainer/SettingsContainer" method="_on_SettingsScreen_popup_hide"]
[connection signal="pressed" from="ScrollContainer/Control/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
